--- a/elements.css
+++ b/elements.css
@@ -2,7 +2,9 @@
 br {
 	margin-top: 10px;
 }
-
+* {
+	font-family: Sans-Serif;
+}
 #snakeI {
 	background-image:url('snakeI.gif');
 	background-repeat: no-repeat top;
@@ -121,7 +123,6 @@ br {
 	height: 60px;	
 	left: 50px;
 	top: 20px;
-	font-family: Sans-Serif;
 	font-size: 20px;
 	color: #FFFFFF;	
 }
@@ -132,18 +133,16 @@ br {
 	height: 60px;	
 	left: 50px;
 	top: 60px;
-	font-family: Sans-Serif;
 	font-size: 20px;
 	color: yellow;	
 }
 #bulletType {
-	background: url('let.png') left top no-repeat;
+	/*background: url('let.png') left top no-repeat;*/
 	position: absolute;
 	width: 120px;
 	height: 60px;	
 	left: 20px;
 	bottom: 200px;
-	font-family: Sans-Serif;
 	font-size: 15px;
 	color: red;
 	text-align: left;
@@ -156,7 +155,6 @@ br {
 	height: 60px;	
 	left: 20px;
 	bottom: 200px;
-	font-family: Sans-Serif;
 	font-size: 15px;
 	color: green;
 	text-align: left;
@@ -164,7 +162,6 @@ br {
 
 }
 #endScore {
-	font-family: Sans-Serif;
 	position: absolute;
 	color: white;
 	width: 300px;
@@ -172,4 +169,14 @@ br {
 	font-size: 30px;
 	top: 180px;
 	left: 340px;
+}
+
+#sally-mode {
+	width: 1000px;
+	height: 300px;
+	background-color: rgba(0,0,0,0.7);
+	color: white;
+	position: absolute;
+	text-align: center;
+	padding-top: 150px;
 }
